--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -92,7 +92,7 @@
     }
 
     body {
-        font-family: "Poppins", sans-serif;
+        font-family: "Noto Sans", sans-serif;
         @apply bg-background text-foreground antialiased;
     }
 
